--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Test FamilySearch Login</title>
-    <script src="index.js"></script>
+    <script src="build.js"></script>
+    <script src="env.js"></script>
   </head>
   <body>
     <h1>Test FamilySearch Login</h1>
